<resources>
    <string name="app_name">Stay Fresh</string>
    <string name="settingsPLTitle">USTAWIENIA</string>
    <string name="settingsPLButton">Ustawienia</string>
    <string name="helpPLButton">Pomoc</string>
    <string name="darkMode">Tryb nocny</string>
    <string name="darkModePL">Tryb Nocny</string>
    <string name="notificationOnPL">Włącz Powiadomienia</string>
    <string name="returnTextPL">Powrót</string>
    <string name="mainFragmentLabel">mainFragmentLabel</string>
    <string name="second_fragment_label">settingFragmentLabel</string>
    <string name="settingsFragmentLabel">settingsFragmentLabel</string>
    <string name="a">newElementFragmentLabel</string>
    <string name="newElementFragmentLabel">newElementFragmentLabel</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="setFontSize">setFontSize</string>
    <string name="helpTextString">🍊 Aplikacja służy do zapisywania produktów spożywczych wraz z ich
        termin przydatności w celu ułatwienia pamiętania o spożyciu danego produktu przed końcem
        terminu przydatności.</string>
    <string name="helpTextString2">🍊 Aby dodać nowy produkt należy wybrać przycisk "+" znajdujacy sie w
        dolnej części menu głównego aplikacji, a następnie podać nazwę produktu oraz jego termin przydatności.
        </string>
    <string name="helpTextString3">🍊 Ponadto można wybrać dany produkt aby obejrzeć proponowane przepisy wraz z wykorzystaniem danego produktu.</string>
    <string name="helpTextString4">🍊 Aby usunąć element z listy przytrzymaj go dłużej, a pojawi się opcja usunięcia.</string>
    <string name="deletePL">Usuń</string>
    <string name="ItemName"></string>
</resources>