<?xml version="1.0" encoding="utf-8"?>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:text="@string/settingsPLTitle" />-->
<!--</LinearLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settingsPLTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsPLTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fontSizeText"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rozmiar Czcionki" />

        <EditText
            android:id="@+id/fontSizeInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <Switch
        android:id="@+id/darkModeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/darkModePL" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificationOnPL" />

    <Button
        android:id="@+id/returnSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnTextPL" />

</LinearLayout>